UX: Fix alignment following the new API usage

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -1,4 +1,18 @@
+@if $links_position == "left" {
+  .home-logo-wrapper-outlet {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+}
+
 .custom-header-links {
+  display: flex;
+
+  .custom-header-link {
+    display: flex;
+  }
+
   @media screen and (max-width: 712px) {
     display: none;
   }
